--- a/css/gmo-ads-master.scss
+++ b/css/gmo-ads-master.scss
@@ -1,69 +1,16 @@
-/* vim: set ft=sass expandtab shiftwidth=2 tabstop=2: */
+$mobile-break-point: 479px;
 
-#gmoadsmaster
+.gmoadsmaster
 {
-  $wpadmin-border-color: #e5e5e5;
-  $wpadmin-background-color: #fafafa;
-  $wpadmin-break-point: 782px;
-
-  .gmoadsmaster-adcodes
-  {
-    width: 100%;
-    overflow: auto;
-    margin-bottom: 2em;
-
-    .gmoadsmaster-adcode
+    ul
     {
-      float: left;
-
-      @media screen and (max-width: $wpadmin-break-point)
-      {
-        float: none !important;
-        width: 100% !important;
-      }
-
-      .gmoadsmaster-adcode-wrap
-      {
-        margin: 5px;
-        background-color: #ffffff;
-        border: 1px solid $wpadmin-border-color;
-
-        .gmoadsmaster-adcode-title
+        list-style-type: none;
+        margin: 8px 0;
+        padding: 0;
+        .widget
         {
-          padding: 10px;
-          background-color: $wpadmin-background-color;
-          border-bottom: 1px solid $wpadmin-border-color;
-
-          h4
-          {
-            margin: 0;
-          }
+            margin: 0.5em 0;
         }
-
-        .gmoadsmaster-adcode-code
-        {
-          padding: 10px;
-          border-bottom: 1px solid $wpadmin-border-color;
-
-          h5
-          {
-            margin-top: 1em;
-            margin-bottom: 0.5em;
-          }
-
-          input
-          {
-            width: 100%;
-          }
-
-          textarea
-          {
-            width: 100%;
-            height: 10em;
-          }
-        }
-      } /* .gmoadsmaster-adcode-wrap */
-    } /* .gmoadsmaster-adcode */
-  } /* .gmoadsmaster-adcodes */
-} /* #gmoadsmaster */
+    }
+}
 
